# dotenvx-sync

./: .gitignore  LICENSE  README.md  pyproject.toml
dotenvx_plaintext_sync/lib/: __init__.py  io_utils.py  paths.py  validation.py
env_share/: __init__.py  cli.py  config.py  decryption.py  encryption.py  init.py
env_share/lib/: __init__.py  dotenvx_runner.py  paths.py  validation.py
